# questions

./: .env  Makefile  README.md  db.sqlite3  pyproject.toml
polls/: admin.py  models.py  urls.py  views.py
polls/migrations/: 0001_initial.py  0002_initial.py  0003_alter_answer_choice.py
questions_project/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html  login.html
templates/polls/: poll.html  polls.html  stats.html  stats_menu.html
users/: admin.py  forms.py  mixins.py  models.py  views.py
users/migrations/: 0001_initial.py
